// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test snapshot :: open modal 1`] = `
<Fragment>
  <Button
    aria-label="About button"
    id="aboutButton"
    onClick={[Function]}
    variant="plain"
  >
    <HelpIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </Button>
  <AboutModal
    appendTo={null}
    backgroundImageSrc=""
    brandImageAlt="Brand Image"
    brandImageSrc="windup-logo.svg"
    className="about-app__component"
    isOpen={true}
    noAboutModalBoxContentContainer={false}
    onClose={[Function]}
    productName="Windup"
    trademark=""
  >
    <TextContent>
      <h4>
        About
      </h4>
      <p>
        <a
          href="https://windup.github.io/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Windup
        </a>
         
        allows application architects and developers to quickly decompile, analyze, assess and modernize large scale application portfolios and migrate them to Red Hat Middleware, cloud and containers.
      </p>
    </TextContent>
    <TextContent
      className="pf-u-py-xl"
    >
      <Grid
        hasGutter={true}
      >
        <GridItem
          lg={7}
        >
          <span
            className="dt"
          >
            Windup
             Core
          </span>
        </GridItem>
        <GridItem
          lg={5}
        >
          (loading)
        </GridItem>
        <GridItem
          lg={7}
        >
          <span
            className="dt"
          >
            Windup
             Web Console
          </span>
        </GridItem>
        <GridItem
          lg={5}
        />
      </Grid>
    </TextContent>
    <TextContent>
      <h4>
        Links
      </h4>
      <List>
        <ListItem>
          <a
            href="https://windup.github.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Website
          </a>
        </ListItem>
        <ListItem>
          <a
            href="https://windup.github.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Documentation
          </a>
        </ListItem>
      </List>
    </TextContent>
    <TextContent
      className="pf-u-py-xl"
    >
      <p>
        The Icon Library used in this project is a derivative of the
         
        <a
          href="https://www.redhat.com/en/about/brand/standards/icons/standard-icons"
          rel="noopener noreferrer"
          target="_blank"
        >
          Standard Icons library
        </a>
         
        by
         
        <a
          href="https://www.redhat.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Red Hat
        </a>
        , used under
         
        <a
          href="https://creativecommons.org/licenses/by/4.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          CC BY 4.0
        </a>
      </p>
    </TextContent>
    <div>
      <Flex>
        <FlexItem>
          <a
            href="https://github.com/windup/windup"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i>
              <GithubIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
            </i>
             
            Source
          </a>
        </FlexItem>
        <FlexItem>
          <a
            href="https://github.com/windup/windup/wiki"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i>
              <BookOpenIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
            </i>
             
            Wiki
          </a>
        </FlexItem>
        <FlexItem>
          <a
            href="https://developer.jboss.org/en/windup?view=discussions"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i>
              <GlobeIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
            </i>
             
            Discussion forum
          </a>
        </FlexItem>
        <FlexItem>
          <a
            href="https://lists.jboss.org/mailman/listinfo/windup-dev"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i>
              <EnvelopeIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
            </i>
             
            Mailing list
          </a>
        </FlexItem>
        <FlexItem>
          <a
            href="https://issues.jboss.org/browse/WINDUP"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i>
              <InfoAltIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
            </i>
             
            Issue tracking
          </a>
        </FlexItem>
      </Flex>
    </div>
  </AboutModal>
</Fragment>
`;

exports[`Test snapshot 1`] = `
<Fragment>
  <Button
    aria-label="About button"
    id="aboutButton"
    onClick={[Function]}
    variant="plain"
  >
    <HelpIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </Button>
  <AboutModal
    appendTo={null}
    backgroundImageSrc=""
    brandImageAlt="Brand Image"
    brandImageSrc="windup-logo.svg"
    className="about-app__component"
    isOpen={false}
    noAboutModalBoxContentContainer={false}
    onClose={[Function]}
    productName="Windup"
    trademark=""
  >
    <TextContent>
      <h4>
        About
      </h4>
      <p>
        <a
          href="https://windup.github.io/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Windup
        </a>
         
        allows application architects and developers to quickly decompile, analyze, assess and modernize large scale application portfolios and migrate them to Red Hat Middleware, cloud and containers.
      </p>
    </TextContent>
    <TextContent
      className="pf-u-py-xl"
    >
      <Grid
        hasGutter={true}
      >
        <GridItem
          lg={7}
        >
          <span
            className="dt"
          >
            Windup
             Core
          </span>
        </GridItem>
        <GridItem
          lg={5}
        >
          (loading)
        </GridItem>
        <GridItem
          lg={7}
        >
          <span
            className="dt"
          >
            Windup
             Web Console
          </span>
        </GridItem>
        <GridItem
          lg={5}
        />
      </Grid>
    </TextContent>
    <TextContent>
      <h4>
        Links
      </h4>
      <List>
        <ListItem>
          <a
            href="https://windup.github.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Website
          </a>
        </ListItem>
        <ListItem>
          <a
            href="https://windup.github.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Documentation
          </a>
        </ListItem>
      </List>
    </TextContent>
    <TextContent
      className="pf-u-py-xl"
    >
      <p>
        The Icon Library used in this project is a derivative of the
         
        <a
          href="https://www.redhat.com/en/about/brand/standards/icons/standard-icons"
          rel="noopener noreferrer"
          target="_blank"
        >
          Standard Icons library
        </a>
         
        by
         
        <a
          href="https://www.redhat.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Red Hat
        </a>
        , used under
         
        <a
          href="https://creativecommons.org/licenses/by/4.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          CC BY 4.0
        </a>
      </p>
    </TextContent>
    <div>
      <Flex>
        <FlexItem>
          <a
            href="https://github.com/windup/windup"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i>
              <GithubIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
            </i>
             
            Source
          </a>
        </FlexItem>
        <FlexItem>
          <a
            href="https://github.com/windup/windup/wiki"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i>
              <BookOpenIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
            </i>
             
            Wiki
          </a>
        </FlexItem>
        <FlexItem>
          <a
            href="https://developer.jboss.org/en/windup?view=discussions"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i>
              <GlobeIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
            </i>
             
            Discussion forum
          </a>
        </FlexItem>
        <FlexItem>
          <a
            href="https://lists.jboss.org/mailman/listinfo/windup-dev"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i>
              <EnvelopeIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
            </i>
             
            Mailing list
          </a>
        </FlexItem>
        <FlexItem>
          <a
            href="https://issues.jboss.org/browse/WINDUP"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i>
              <InfoAltIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
            </i>
             
            Issue tracking
          </a>
        </FlexItem>
      </Flex>
    </div>
  </AboutModal>
</Fragment>
`;
